--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
                 Go head-to-head against your friends in the classic game of Pac-Man! One player will be the titular character, while up to 4 people can be ghosts.
             </p>
         </header>
+        <div id="maze"></div>
         <footer>
             <p class="copyright">
                 Josh Allard jnallard@wpi.edu<br />
