--- a/public/index.html
+++ b/public/index.html
@@ -29,4 +29,5 @@
     </article>
 </body>
 </html>
+<script src="/movable.js" type="text/javascript"></script>
 <script src="/socket.io.js" type="text/javascript"></script>
