Added new art/styling for 'taken' and 'your choice' versions of the buttons

--- a/public/index.html
+++ b/public/index.html
@@ -17,16 +17,21 @@
         </header>
         <div id='lobby'>
             <h1 id="lobbytext">
-                Game Lobby
+                Choose your Character:
             </h1>
             <form>
-                <button type='submit' id='pacbutton' name='pacman'><img src='assets/button-pacman.jpg' /></button>
-                <button type='submit' id='ghost1button' name='ghost'><img src='assets/button-ghost.png' /></button>
-                <button type='submit' id='ghost2button' name='ghost'><img src='assets/button-ghost.png' /></button>
-                <button type='submit' id='ghost3button' name='ghost'><img src='assets/button-ghost.png' /></button>
-                <button type='submit' id='ghost4button' name='ghost'><img src='assets/button-ghost.png' /></button>
+                <button type='submit' id='pacbutton' name='pacman'><img src='assets/pacman.jpg' /></button>
+                <button type='submit' id='ghost1button' name='ghost'><img src='assets/ghost-1.png' /></button>
+                <button type='submit' id='ghost2button' name='ghost'><img src='assets/ghost-2.png' /></button>
+                <button type='submit' id='ghost3button' name='ghost'><img src='assets/ghost-3.png' /></button>
+                <button type='submit' id='ghost4button' name='ghost'><img src='assets/ghost-4.png' /></button>
             </form>
         </div>
+        <br />
+        <div id="startbutton">
+
+        </div>
+        <br />
         <div id="maze">
             
         </div>
