Added start game, fixed direction, and power pellet for ghosts

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,9 @@
         </div>
         <br />
         <div id="startbutton">
-
+            <!--<form onsubmit="return false">
+            <button type='button' id='startButton' name='start'><img src='assets/start.png' /></button>-->
+        </form>
         </div>
         <br />
         <div id="maze">
