Added stat display

--- a/public/pacmanLost.html
+++ b/public/pacmanLost.html
@@ -19,16 +19,11 @@
         <h1>Pacman lost!</h1>  
         <p><a href="/">[Return]</a></p> 
         </div>
-        <footer>
-            <p class="copyright">
-                Josh Allard jnallard@wpi.edu<br />
-                Nathan Bryant nmbryant@wpi.edu<br />
-                Connor Porell cgporell@wpi.edu
-            </p>
-            <hr />
-            <p class="copyright">CS 4241: Webware (Fall 2015)</p>
-            <p class="copyright">Worcester Polytechnic Institute</p>
-        </footer>
+        <div id="stats">
+        </div>
     </article>
 </body>
 </html>
+<script src="/underscore.js" type="text/javascript"></script>
+<script src="/socket.io.js" type="text/javascript"></script>
+<script src="/stats.js" type="text/javascript"></script>
