--- a/public/pacmanLost.html
+++ b/public/pacmanLost.html
@@ -8,27 +8,14 @@
     <!---->
 </head>
 <body id="thebody">
-    <article>
-        <header>
-            <h1>Multiplayer Pac-Man!</h1>
-            <p class="header-note">
-                Go head-to-head against your friends in the classic game of Pac-Man! One player will be the titular character, while up to 4 people can be ghosts.
-            </p>
-        </header>
         <div>
-        <h1>Pacman lost!</h1>  
-        <p><a href="/">[Return]</a></p> 
+        <h3 class="gameover">Pacman lost!</h3>  
+        <img class="lost" src="assets/pac-ko.gif" height="282" width="282" />
+        <h3><a href="/">[Return]</a></h3> 
         </div>
-        <footer>
-            <p class="copyright">
-                Josh Allard jnallard@wpi.edu<br />
-                Nathan Bryant nmbryant@wpi.edu<br />
-                Connor Porell cgporell@wpi.edu
-            </p>
-            <hr />
-            <p class="copyright">CS 4241: Webware (Fall 2015)</p>
-            <p class="copyright">Worcester Polytechnic Institute</p>
-        </footer>
-    </article>
+
 </body>
 </html>
+<audio autoplay>
+    <source src="audio/pacman_death.wav" type="audio/wav" />
+</audio>
