Finished styling on the win/loss/login screens

--- a/public/pacmanWon.html
+++ b/public/pacmanWon.html
@@ -17,6 +17,9 @@
         </div>
 </body>
 </html>
+<audio autoplay>
+    <source src="audio/pacman_intermission.wav" type="audio/wav" />
+</audio>
 <script src="/underscore.js" type="text/javascript"></script>
 <script src="/socket.io.js" type="text/javascript"></script>
 <script src="/stats.js" type="text/javascript"></script>
