Removed console logs

--- a/public/login.html
+++ b/public/login.html
@@ -50,7 +50,7 @@ usernameEl.addEventListener('keypress', submitUsername, true);
 
 
 function submitUsername(evt){
-    console.log(evt);
+    //console.log(evt);
     if(evt.keyCode && evt.keyCode !== 13){
         return;
     }
