--- a/public/login.html
+++ b/public/login.html
@@ -50,8 +50,8 @@ usernameEl.addEventListener('keypress', submitUsername, true);
 
 
 function submitUsername(evt){
-    //console.log(evt);
-    if(evt.keyCode && evt.keyCode !== 13){
+    console.log(evt);
+    if(!evt.keyCode || evt.keyCode !== 13){
         return;
     }
 
